--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "homebridge-sonos",
-  "version": "0.0.4",
-  "description": "Sonos plugin for homebridge: https://github.com/nfarina/homebridge",
+  "name": "homebridge-fidelio",
+  "version": "0.0.1",
+  "description": "Philips Fidelio A3/A5/A9 (AW series) plugin for homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
     "homebridge-plugin"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/nfarina/homebridge-sonos.git"
+    "url": "git://github.com/mlaurijsse/homebridge-fidelio.git"
   },
   "bugs": {
-    "url": "http://github.com/nfarina/homebridge-sonos/issues"
+    "url": "http://github.com/mlaurijsse/homebridge-fidelio/issues"
   },
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
   },
   "dependencies": {
-    "sonos": "^0.8.0",
-    "underscore": "^1.8.3"
+
   }
 }
