--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "homebridge": ">=0.2.0"
   },
   "dependencies": {
-
+    "json5": "^0.5.0",
+    "request": "^2.65.0",
+    "hap-nodejs": "^0.2.8"
   }
 }
