--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-fidelio",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Philips Fidelio A3/A5/A9 (AW series) plugin for homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
@@ -20,6 +20,8 @@
   "dependencies": {
     "json5": "^0.5.0",
     "request": "^2.65.0",
-    "hap-nodejs": "^0.2.8"
+    "hap-nodejs": "^0.2.8",
+    "alsa-monitor": "^1.0.1",
+    "loudness": "^0.2.2"
   }
 }
