--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "json5": "^0.5.0",
     "request": "^2.65.0",
-    "hap-nodejs": "^0.2.8",
+    "hap-nodejs": "^0.2.8"
+  },
+  "optionalDependencies": {
     "alsa-monitor": "^1.0.1",
     "loudness": "^0.2.2"
   }
