--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "dependencies": {
     "json5": "^0.5.0",
-    "request": "^2.65.0",
-    "hap-nodejs": "^0.2.8"
+    "request": "^2.65.0"
   },
   "optionalDependencies": {
     "alsa-monitor": "^1.0.1",
-    "loudness": "^0.2.2"
+    "loudness": "^0.2.3",
+    "hap-nodejs": "^0.2.8"
   }
 }
