--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "json5": "^0.5.0",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "node-watch": "^0.3.5"
   },
   "optionalDependencies": {
     "alsa-monitor": "mlaurijsse/alsa-monitor-node",
