--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-fidelio",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Philips Fidelio A3/A5/A9 (AW series) plugin for homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "author": {
@@ -24,7 +24,8 @@
   "dependencies": {
     "json5": "^0.5.0",
     "request": "^2.65.0",
-    "node-watch": "^0.3.5"
+    "node-watch": "^0.3.5",
+    "async": "^2.0.1"
   },
   "optionalDependencies": {
     "alsa-monitor": "mlaurijsse/alsa-monitor-node",
