--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-fidelio",
-  "version": "0.0.4",
+  "version": "0.1.1",
   "description": "Philips Fidelio A3/A5/A9 (AW series) plugin for homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "author": {
@@ -28,8 +28,7 @@
     "async": "^2.0.1"
   },
   "optionalDependencies": {
-    "alsa-monitor": "mlaurijsse/alsa-monitor-node",
-    "loudness": "mlaurijsse/node-loudness",
-    "hap-nodejs": "^0.2.8"
+    "alsa-monitor": "illegalprime/alsa-monitor-node",
+    "loudness": "mlaurijsse/node-loudness"
   }
 }
